5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1585_2895.log
== TEST (2019-03-21 11:53:39) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

fretesite1 = nA
nA = 50
fretesite2 = nB
nB = 45
fretesite3 = nC
nC = 30
cotadorafael = 50
valor = (enc * jogos)*nA + (enc*jogos)*nB + (enc*jogos)*nC  + cotadorafael
 print(valor)




-- ERROR:
File "XXXX", line 12
    print(valor)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:56:21) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual site? ")
				 if site = nA 
				 if site = nB
				 if site = nC
fretesite1 = nA
nA = 50
fretesite2 = nB
nB = 45
fretesite3 = nC
nC = 30
cotadorafael = 50
valor = (enc * jogos)*nA + (enc*jogos)*nB + (enc*jogos)*nC  + cotadorafael
 
print(valor)



-- ERROR:
File "XXXX", line 5
    if site = nA 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:00) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual site? ")
fretesite1 = nA
nA = 50
fretesite2 = nB
nB = 45
fretesite3 = nC
nC = 30
cotadorafael = 50
valor = (enc * jogos)*nA + (enc*jogos)*nB + (enc*jogos)*nC  + cotadorafael
 
print(valor)



-- ERROR:
File "XXXX", line 5
    fretesite1 = nA
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:57) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual site? ")
fretesite1 = 50
fretesite2 = 35
fretesite3 = 30
cotadorafael = 50
valor = (enc * jogos)*fretesite1 + (enc*jogos)*fretesite2 +(enc*jogos)*fretesite3
 
print(valor)



-- ERROR:
File "XXXX", line 5
    fretesite1 = 50
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:00:04) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual site? ")
nA=50
nB = 30
nC=30
cotadorafael = 50
valor = (enc * jogos)*fretesite1 + (enc*jogos)*fretesite2 +(enc*jogos)*fretesite3 + cotadorafael
 
print(valor)



-- ERROR:
File "XXXX", line 5
    nA=50
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:44:24) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual site? ")
nA=50
nB = 30
nC=30
valor = (enc * jogos)*fretesite1 + (enc*jogos)*fretesite2 +(enc*jogos)*fretesite3 + cotadorafael
 
print(valor)



-- ERROR:
File "XXXX", line 5
    nA=50
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:44:43) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual site? ")
nA = 50
nB = 30
nC = 30
valor = (enc * jogos)*fretesite1 + (enc*jogos)*fretesite2 +(enc*jogos)*fretesite3 + cotadorafael
 
print(valor)



-- ERROR:
File "XXXX", line 5
    nA = 50
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:45:53) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

site = float(input(" qual valor do frete? ")

 
print(valor)



-- ERROR:
File "XXXX", line 7
    print(valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:47:47) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

frete = float(input(" qual valor do frete? ")
total = (enc*jogos) + site
 
print(total)



-- ERROR:
File "XXXX", line 5
    total = (enc*jogos) + site
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:48:13) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

frete = float(input(" qual valor do frete? ")
total = (enc * jogos) + frete
 
print(total)



-- ERROR:
File "XXXX", line 5
    total = (enc * jogos) + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:48:36) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

frete = float(input(" qual valor do frete? ")




-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:48:47) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))

frete = float(input(" qual valor do frete? ")
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:48:57) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
jogos = float(input("qual o valor unitario do jogo?"))
frete = float(input(" qual valor do frete? ")
-- ERROR:
File "XXXX", line 4
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:52:21) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
print(enc)
jogos = float(input("qual o valor unitario do jogo?"))
print(jogos * 8)
frete = float(input(" qual valor do frete?")
total = float((jogos*8) + frete))
print(total)
-- ERROR:
File "XXXX", line 6
    total = float((jogos*8) + frete))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:53:17) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
print(enc)
jogos = float(input("qual o valor unitario do jogo?"))
print(jogos * 8)
frete = float(input(" qual valor do frete?")
				  print(frete)
total = float((jogos*8) + frete))
print(total)
-- ERROR:
File "XXXX", line 6
    print(frete)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:53:33) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
print(enc)
jogos = float(input("qual o valor unitario do jogo?"))
print(jogos * 8)
frete = float(input(" qual valor do frete?")
				  print("frete")
total = float((jogos*8) + frete))
print(total)
-- ERROR:
File "XXXX", line 6
    print("frete")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:53:47) 
-- CODE:
enc = int(input("Quantos jogos quer encomendar?"))
print(enc)
jogos = float(input("qual o valor unitario do jogo?"))
print(jogos * 8)
frete = float(input(" qual valor do frete?")
				  print("frete")
total = float(("jogos*8) + frete)")
print(total)
-- ERROR:
File "XXXX", line 6
    print("frete")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:58:36) 
-- CODE:
enc = float(input("Quantos jogos quer encomendar?"))
valor = float(input("qual o valor unitario do jogo?"))
total = (100*enc) + valor
print(total)
-- OUTPUT:
1245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:59:03) 
-- CODE:
enc = float(input("Quantos jogos quer encomendar?"))
valor = float(input("qual o valor unitario do jogo?"))
total = (100*enc) + valor
print(total)
-- OUTPUT:
1245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:59:04) 
-- CODE:
enc = float(input("Quantos jogos quer encomendar?"))
valor = float(input("qual o valor unitario do jogo?"))
total = (100*enc) + valor
print(total)
-- OUTPUT:
1245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:59:44) 
-- CODE:
enc = float(input("Quantos jogos quer encomendar?"))
valor = float(input("qual o valor unitario do jogo?"))
total = (enc*valor)
print(total)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:01:45) 
-- CODE:
enc = float(input("Quantos jogos quer encomendar?"))
valor = float(input("qual o valor unitario do jogo?"))
frete = float(input(" quanto vale o frete? "))
total = (enc*valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:02:00) 
-- CODE:
enc = float(input("Quantos jogos quer encomendar?"))
valor = float(input("qual o valor unitario do jogo?"))
frete = float(input(" quanto vale o frete? "))
total = (enc*valor) + frete
print(total)
-- EXECUTION TIME:
0.211475
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
